Fix fullscreen modal background on overflow

--- a/css/style.less
+++ b/css/style.less
@@ -671,7 +671,7 @@ input[type=text], input[type=password], input[type=email], textarea.form-control
 
     &.fullScreen .modal-dialog {
          .modal-content {
-            height: 100vh;
+            min-height: 100vh;
             background: fade(@brand-primary, 99%);
 
             .modal-header {
